--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
     <div class="main-container">
         <!-- Banner Section -->
         <section class="banner">
-            <img src="/assets/2010 (1).png" alt="FOR HER - To have you on the love" class="banner-image">
+            <img src="assets/2010 (1).png" alt="FOR HER - To have you on the love" class="banner-image">
         </section>
 
             <!-- Hero Section -->
-<section class="section hero" style="background-image: url('/assets/2010.png');">
+<section class="section hero" style="background-image: url('assets/2010.png');">
     <div class="hero-overlay">
         <div class="hero-content">
             <h2 class="section-title">" For her" - For the woman we love</h2>
@@ -345,28 +345,28 @@
             <h2 class="section-title">Sản phẩm</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="/assets/z7260437942103_8f06f0dc628c7f514dabd56897893b0c.jpg" class="product-image">
+                    <img src="assets/z7260437942103_8f06f0dc628c7f514dabd56897893b0c.jpg" class="product-image">
                     <div class="product-info">
                         <h3>Charm móc khóa custom tên (4 chữ)</h3>
                         <p>Custom theo theo tên của bạn, màu ngẫu nhiên</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="/assets/z7260437946382_2d951a5d10e4025e6c7adb09f072699f.jpg" class="product-image">
+                    <img src="assets/z7260437946382_2d951a5d10e4025e6c7adb09f072699f.jpg" class="product-image">
                     <div class="product-info">
                         <h3>Charm móc khóa thông điệp (hơn 4 chữ)</h3>
                         <p>Thông điệp ý nghĩa của riêng bạn</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="/assets/z7260437929402_f0898c93932a4cd510abc2c11363dd59.jpg" class="product-image">
+                    <img src="assets/z7260437929402_f0898c93932a4cd510abc2c11363dd59.jpg" class="product-image">
                     <div class="product-info">
                         <h3>Charm móc khóa custom tone sur tone</h3>
                         <p>Charm custom theo 1 tone màu chủ đạo</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="/assets/z7260437877981_c61215aa1acac2a14c00e222f5a32922.jpg" class="product-image">
+                    <img src="assets/z7260437877981_c61215aa1acac2a14c00e222f5a32922.jpg" class="product-image">
                     <div class="product-info">
                         <h3>Dây charm điện thoại</h3>
                         <p>Có 2 size lớn và nhỏ, phù hợp từng nhu cầu khác nhau, nhận thêm charm chữ nhỏ</p>
@@ -492,4 +492,5 @@
         document.getElementById('deliveryTime').max = maxDate.toISOString().split('T')[0];
     </script>
 </body>
+
 </html>
