--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FOR HER - Custom Charm Móc Khóa</title>
+    <title>FOR HER - FOR THE WOMAN WE LOVE</title>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <style>
         * {
@@ -494,4 +494,5 @@
 </body>
 
 </html>
+
 
