--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <div class="main-container">
         <!-- Banner Section -->
         <section class="banner">
-           <img src="assets/2010-1.png" alt="FOR HER - To have you on the love" class="banner-image">
+           <img src="assets/banner.png" alt="FOR HER - To have you on the love" class="banner-image">
         </section>
 
             <!-- Hero Section -->
@@ -494,5 +494,6 @@
 </body>
 
 </html>
+
 
 
